0.89 (TBD)
-----------------
- New: Added support for SCC and CCD encoder formats
- New: Added support to output captions to MCC file (#733).
- New: Added a few comments.
- New: Added more fatals on no arguments errors.
- New: Updated ccextractor.cnf.sample.
- New: Add support for censoring words ("Kid Friendly") (#1139)
- Fix: ccx_demuxer_mxf.c: Parse framerate from MXF captions to fix caption timings.
- Fix: hardsubx_decoder.c: Fix memory leaks using Leptonica API.
- Fix: linux/Makefile.am: added some sources to enable rpms to be created.
- Fix: Crash when using -sc (sentence case) option (#1115)
- Fix: Correct if-clauses (missing or misplaced brackets).
- Fix: Comment out some unused code.
- Fix: Resolve bunch of compilation's warnings.
- Fix: Segmentation fault on VOB #1128
- Fix: Hang while processing video #1121
- Fix: Removed redundant check_configuration_file function
- Fix: lib_ccx.c: Initialize fatal error logging function before first usage in init_libraries
- Fix: Added italics, underline, and color rendering support for -out=spupng with EIA608/teletext
- Fix: Change inet_ntop to inet_ntoa for Windows XP compatibility
- FIX: Added an option to disable timestamps for WebVTT (In response to issue #1127)
- FIX: Add FT_Done_Face to destroy face objects after they're used
- Fix: Fixed a small OCR memory leak

0.88 (2019-05-21)
-----------------
- New: More tapping points for debug image in ccextractor.
- New: Add support for tesseract 4.0
- Optimize: Remove multiple RGB to grey conversion in OCR.
- Fix: Update UTF8Proc to 2.2.0
- Fix: Update LibPNG to 1.6.35
- Fix: Update Protobuf-c to 1.3.1
- Fix: Warn instead of fatal when a 0xFF marker is missing
- Fix: Segfault in general_loop.c due to null pointer dereference (case of no encoder)
- Fix: Enable printing hdtv stats to console.
- Fix: Many typos in comments and output messages
- Fix: Ignore Visual Studio temporary project files
- New: Add support for non-Latin characters in stdout