@@ -284,7 +284,7 @@ int write_cc_bitmap_as_webvtt(struct cc_subtitle *sub, struct encoder_ctx *conte
 	if (sub->flags & SUB_EOD_MARKER)
 		context->prev_start = sub->start_time;
 
-	str = paraof_ocrtext(sub, context->encoded_crlf, context->encoded_crlf_length);
+	str = paraof_ocrtext(sub, context);
 	if (str)
 	{
 		if (context->prev_start != -1 || !(sub->flags & SUB_EOD_MARKER))
