@@ -15,6 +15,6 @@ void delete_ocr (void** arg);
 void* init_ocr(int lang_index);
 char* ocr_bitmap(void* arg, png_color *palette,png_byte *alpha, unsigned char* indata,int w, int h, struct image_copy *copy);
 int ocr_rect(void* arg, struct cc_bitmap *rect, char **str, int bgcolor, int ocr_quantmode);
-char *paraof_ocrtext(struct cc_subtitle *sub, const unsigned char *crlf, unsigned crlf_length);
+char *paraof_ocrtext(struct cc_subtitle *sub, struct encoder_ctx *context);
 
 #endif
